--- a/plot.ipynb
+++ b/plot.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "9107251b-0c29-441f-8a21-e695334b6ae0",
    "metadata": {
     "tags": []
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "8569229c-1f97-43aa-bc4a-68c2fc967351",
    "metadata": {
     "tags": []
@@ -64,6 +64,16 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "85861bb3-f68b-4d5f-8038-44a36e6396d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_data = pre_process_data('dump')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "c56a4541-b99f-4294-ace2-b355529b4088",
    "metadata": {
     "tags": []
@@ -81,7 +91,6 @@
     }
    ],
    "source": [
-    "plot_data = pre_process_data('dump')\n",
     "plt.style.use('seaborn-v0_8-whitegrid')\n",
     "fig, axs = plt.subplots(2,3, sharey='row')\n",
     "fig.set_figheight(6)\n",
@@ -92,15 +101,26 @@
     "    confidence_plot(ax,'dis', '--s', 'DisLinUCB', plot_data[eps]['dis'])\n",
     "    confidence_plot(ax,'hlin', '--o', 'H-LinUCB', plot_data[eps]['hlin'])\n",
     "    ax.set_xlabel('({}) $\\epsilon={}$'.format(chr(97+i), eps))\n",
+    "    # ax.ticklabel_format(style='sci', axis='x', scilimits=(0,0))\n",
+    "    # ax.ticklabel_format(style='sci', axis='y', scilimits=(0,0))\n",
     "\n",
     "handles, labels = axs[0,0].get_legend_handles_labels()\n",
     "\n",
     "axs[0,0].set_ylabel('Group Regret')\n",
     "axs[1,0].set_ylabel('Group Regret')\n",
+    "\n",
     "fig.legend(handles, labels, loc='upper center',bbox_to_anchor=(0.5, 1.1), ncol=3, frameon=True)\n",
     "fig.tight_layout()\n",
-    "plt.savefig('plot.pdf',bbox_inches='tight')"
+    "plt.savefig('plot.svg',bbox_inches='tight', dpi=300)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3068bbf9-f3cc-477e-a40b-851209d66dbc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
